--- a/_layouts/cards.html
+++ b/_layouts/cards.html
@@ -4,9 +4,23 @@ layout: default
 
 {{content}}
 
-<div class="row row-cols-1 row-cols-md-2 g-4" data-masonry='{"percentPosition": true }'>
+<div class="btn-group" role="group" aria-label="Basic outlined example">  
+  <button type="button" class="btn btn-outline-primary" data-filter="*">show all</button>
+  <button type="button" class="btn btn-outline-primary" data-filter=".purpose-built">purpose-built</button>
+</div>
+
+<div class="btn-group" role="group" aria-label="Basic outlined example">  
+  <button type="button" class="btn btn-outline-primary" data-filter="*">show all</button>
+  <button type="button" class="btn btn-outline-success" data-filter=".success">Open</button>
+  <button type="button" class="btn btn-outline-warning" data-filter=".warning">Partial</button>
+  <button type="button" class="btn btn-outline-danger" data-filter=".danger">Closed</button>
+  <button type="button" class="btn btn-outline-secondary" data-filter=".unknown">Unknown</button>
+</div>
+
+<hr>
+<div class="row row-cols-1 row-cols-md-2 g-4" id="masonry" data-isotope='{ "itemSelector": ".col", "layoutMode": "masonry" }'>
   {% for platform in site.platforms %}
-    <div class="col">
+    <div class="col {% if platform.rating %}{{ platform.rating | downcase }}{% else %}unknown{% endif %}">
       <div class="card border mb-3">
         <div class="card-body">
             <h5>
@@ -53,6 +67,15 @@ layout: default
       </div>
     </div>
   {% endfor %}
-</div>
 
-<script src="https://cdn.jsdelivr.net/npm/masonry-layout@4.2.2/dist/masonry.pkgd.min.js" integrity="sha384-GNFwBvfVxBkLMJpYMOABq3c+d3KnQxudP/mGPkzpZSTYykLBNsZEnG2D9G/X/+7D" crossorigin="anonymous" async></script>
+  <div class="col">
+    <div class="card border border-2 mb-3" style="border-style: dashed!important;">
+      <div class="card-body">
+        <h5 class="mb-3">See something missing?</h5>
+        <a class="btn btn-outline-primary" href="https://github.com/open-research-platforms/open-research-platforms.github.io/issues/new?assignees=&labels=Platform&template=new_platform.yml&title=%5BPLATFORM%5D+%3Ctitle%3E"><i class="bi bi-github"></i> Add a Platform via Github</a>
+        <p class="text-secondary mt-3"><small>Note: Submission form requires a <a href="https://github.com/join" class="link-secondary">free Github account</a>.</small></p>
+      </div>
+    </div>
+  </div>
+  
+</div>
