--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -14,7 +14,7 @@
           </ul>
           {%- endif %}
           <p>
-            <a class="btn btn-blue text-white" href="{{site.github.repository_url}}/blob/main/{{page.path}}">
+            <a class="btn btn-blue text-white" href="{{site.github.repository_url}}/blob/main/{{page.path}}?plain=1">
               <i class="bi bi-github"></i>
               <span>Edit this page on Github</span>
             </a>
@@ -23,8 +23,6 @@
               <span>Subscribe</span>
             </a>
           </p>
-        </div>
-        <div class="col">
           <p>{{ site.description | escape }}</p>
         </div>
       </div>
