--- a/_layouts/platform.html
+++ b/_layouts/platform.html
@@ -24,6 +24,14 @@ layout: default
         <p class="lead">{{ page.description }}</p>
 
         {{ content }}
+
+        <script src="https://utteranc.es/client.js"
+        repo="open-research-platforms/discussion"
+        issue-term="pathname"
+        theme="github-dark"
+        crossorigin="anonymous"
+        async>
+        </script>
       </div>
       <div class="col col-4">
         {% if page.links %}
